fixing wrap

--- a/css/calendario.css
+++ b/css/calendario.css
@@ -1,7 +1,8 @@
 
-section{
+#eventos{
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: center;
     gap: 1rem;
     border-radius: 1rem;
     padding: 0 3rem;
